测试其他服务器提供公式显示功能

--- a/_posts/201407/2014-07-27-svn-to-git.md
+++ b/_posts/201407/2014-07-27-svn-to-git.md
@@ -21,3 +21,4 @@ tags: [continuous integration,svn,git,版本控制]
 
 \frac{wer}{fen}
 
+<img src="http://www.forkosh.com/mathtex.cgi? \Large x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}">
